# earworm

./: CLAUDE.md  Cargo.toml
.beads/: issues.jsonl
earworm-macros/: Cargo.toml
earworm-macros/src/: lib.rs
examples/: CLAUDE.md  README.md  adsr_spacebar.rs  chord_mixer.rs  combinator_showcase.rs  compressor_demo.rs  distortion_demo.rs  envelope_demo.rs  filter_demo.rs  filter_demo_interactive.rs  limiter_demo.rs  play_deadmau5_filter.rs  play_delay.rs  play_noise.rs  play_oscillators.rs  play_sawtooth.rs  play_sine.rs  play_square.rs  play_triangle.rs  polyphony_demo.rs  ring_modulation.rs  sequencer_simple.rs  tremolo_demo.rs  vibrato_demo.rs  voice_demo.rs  wavetable_from_wav.rs
examples/common/: mod.rs
scripts/: test-examples.sh
src/: combinators.rs  lib.rs  signal.rs
src/core/: audio.rs  combinators.rs  mod.rs  signal.rs
src/effects/: bitcrusher.rs  compressor.rs  delay.rs  distortion.rs  limiter.rs  mod.rs  tremolo.rs  vibrato.rs
src/envelopes/: adsr.rs  curve.rs  mod.rs
src/filters/: biquad.rs
src/music/: adsr.rs  ahd.rs  allocator.rs  ar.rs  core.rs  envelope.rs  frequency.rs  metronome.rs  mod.rs  pattern.rs  sequencer.rs  voice.rs
src/noise/: mod.rs  pink.rs  white.rs
src/oscillators/: mod.rs  pulse.rs  sawtooth.rs  sine.rs  square.rs  traits.rs  triangle.rs
src/signals/: audio.rs  core.rs  mod.rs
src/synthesis/: audio_ext.rs  mod.rs
src/synthesis/effects/: bitcrusher.rs  compressor.rs  delay.rs  distortion.rs  limiter.rs  mod.rs  tremolo.rs  vibrato.rs
src/synthesis/envelopes/: adsr.rs  curve.rs  mod.rs
src/synthesis/filters/: biquad.rs  mod.rs
src/synthesis/noise/: mod.rs  pink.rs
src/synthesis/oscillators/: mod.rs  pulse.rs  sawtooth.rs  sine.rs  square.rs  traits.rs  triangle.rs  (+1 more)
tests/: note_macro.rs
