[workspace]
members = ["earworm-macros"]

[package]
name = "earworm"
version = "0.1.0"
edition = "2024"

[features]
default = ["synth"]
synth = []
music = ["synth", "earworm-macros"]

[dependencies]
rand = "0.8"
earworm-macros = { path = "earworm-macros", optional = true }

[dev-dependencies]
cpal = "0.15"
anyhow = "1.0"
crossterm = "0.28"
cargo-husky = { version = "1.5.0", features = ["precommit-hook", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"] }

# Examples that require specific features
[[example]]
name = "voice_demo"
required-features = ["music"]

[[example]]
name = "polyphony_demo"
required-features = ["music"]

[[example]]
name = "sequencer_simple"
required-features = ["music"]
